fix: remove stray header text

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-Delete locked” bosganda confirm o‘rniga chiroyli modal ham qilib beraman.<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
